HelloUltraviolet/Fixtures/RejectedSource/Expressions/YieldOutsideAsync/Expected.uv
//! Expected diagnostic metadata for the YieldOutsideAsync rejected-source specimen.

expectedDiagnostic("E-CON-0210", "rule.21.Yield-NotAsync-Err")
